# glnis_gammaboard_api

./: .gitignore  README.md  apptainer.def  flake.nix  gaussian_test.py  gaussian_test_glnis_param.py  pyproject.toml
examples/: epem_ddx_mclmb_spherical.toml  ghost_bump_madnis.toml
src/: madnis_sampler.py  run_sampler.py
src/glnis/: pyproject.toml
src/glnis/core/: parameterisation.py  parser.py
src/glnis/core/nn/: losses.py  subnet_constructor.py
src/glnis/utils/: helpers.py  types.py
