[build-system]
requires = ["setuptools>=61.0"]

[project]
name = "glnis_gammaboard_api"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
authors = [ { name = "Nic Fink", email = "nic.fink@students.unibe.ch" } ]

dependencies = [
    "tomlkit>=0.10",
    "numpy>=2.2,<3",
    "torch>=2.6,<3",
    "vegas>=6.2",
    "pydot>=3.0",
    "matplotlib>=3.6",
    "symbolica>=1.5.0",
    "gammaboard-process @ git+https://github.com/alphal00p/gammaboard.git@main#subdirectory=process_api/python",
    "madnis @ git+https://github.com/madgraph-ml/madnis.git@main",
    "momtrop @ git+https://github.com/Fink-Nic/momtrop.git@main",
]

[project.scripts]
glnis-gammaboard-sampler = "run_sampler:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["madnis_sampler", "run_sampler"]

[tool.setuptools.packages.find]
where = ["src"]
